# perl-lsp

./: .cargo-semver-checks.toml  .fuzz-justfile-recipes.txt  .gitattributes  .gitignore  .tokeignore  .trivyignore  AGENTS.md  ARCHITECTURE.md  BENCHMARK_BASELINE_PR173.md  BENCHMARK_DESIGN.md  BENCHMARK_RESULTS.md  BRANCH_PREPARATION_RECEIPT.md  CHANGELOG.md  CHANGELOG_v0.8.3-rc1.md  CHANGELOG_v0.8.4.md  CHECK_RUN_BENCHMARKS.md  CLAUDE.md  CLIPPY_V2_ANALYSIS.md  CODE_OF_CONDUCT.md  COMMIT_MESSAGE.txt  CONTINUE_REDO_IMPLEMENTATION_SUMMARY.md  CONTRACT_REVIEW_CHECK_RUN.md  CONTRACT_REVIEW_PROGRESS_COMMENT.md  CONTRIBUTING.md  CONTRIBUTING_LSP.md  COVERAGE_ANALYSIS_CHECK_RUN.md  COVERAGE_ANALYSIS_PROGRESS_COMMENT.md  CRITICAL_FIXES_NEEDED.md  Cargo.toml  Cargo.toml.backup-1769576666  Cargo.toml.backup-1769577926  Cargo.toml.backup-1769578803  Cargo.toml.backup-1769582817  Cargo.toml.backup-1769585648  Cargo.toml.backup2  Cargo.toml.backup3  Cargo.toml.backup5  Cargo.toml.backup6  DAY5_COMPLETION_SUMMARY.md  DEAD_CODE_SETUP_SUMMARY.md  (+480 more)
crates/parser-benchmarks/: Cargo.toml
crates/parser-benchmarks/benches/: compare_parsers.rs  comprehensive_patterns.rs  incremental_edit.rs  simple_compare.rs
crates/parser-benchmarks/src/: lib.rs
crates/parser-tests/: Cargo.toml
crates/parser-tests/src/: corpus.rs  corpus_converter.rs  lib.rs
crates/perl-ast/: CLAUDE.md  Cargo.toml  README.md
crates/perl-ast/src/: ast.rs  lib.rs  v2.rs
crates/perl-builtins/: CLAUDE.md  Cargo.toml  README.md
crates/perl-builtins/src/: builtin_signatures.rs  builtin_signatures_phf.rs
crates/perl-corpus/: CLAUDE.md  Cargo.toml  README.md
crates/perl-corpus/fuzz/: README.md  crash-b6dd6f9afe3c18f3efa0b5bb8454be7744f2a458  heredoc_boundary_fix_validation.txt  transliteration_parser_issue.pl
crates/perl-corpus/src/: cases.rs  codegen.rs  continue_redo.rs  files.rs  format_statements.rs  glob_expressions.rs  index.rs  lib.rs  lint.rs  meta.rs  tie_interface.rs
crates/perl-corpus/tests/: highlight_integration_test.rs
crates/perl-dap/: CLAUDE.md  Cargo.toml  README.md  build.rs
crates/perl-dap-breakpoint/: CLAUDE.md  Cargo.toml  README.md
crates/perl-dap-breakpoint/src/: lib.rs  suggestion.rs  validator.rs
crates/perl-dap-eval/: CLAUDE.md  Cargo.toml  README.md
crates/perl-dap-eval/src/: lib.rs  patterns.rs  validator.rs
crates/perl-dap-stack/: CLAUDE.md  Cargo.toml  README.md
crates/perl-dap-stack/src/: classifier.rs  lib.rs  parser.rs
crates/perl-dap-variables/: CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md
crates/perl-dap-variables/src/: lib.rs  parser.rs  renderer.rs
crates/perl-dap/benches/: dap_benchmarks.rs  dap_native_benchmarks.rs
crates/perl-dap/src/: breakpoints.rs  bridge_adapter.rs  configuration.rs  debug_adapter.rs  dispatcher.rs  feature_catalog.rs  inline_values.rs  lib.rs  main.rs  platform.rs  protocol.rs  security.rs  tcp_attach.rs
crates/perl-dap/tests/: bridge_integration_tests.rs  control_flow_handlers_tests.rs  dap_adapter_tests.rs  dap_breakpoint_matrix_tests.rs  dap_completions_tests.rs  dap_comprehensive_test.rs  dap_dependency_tests.rs  dap_edge_cases_test.rs  dap_golden_transcript_tests.rs  dap_integration_test.rs  dap_launch_security_test.rs  dap_launch_security_tests.rs  dap_modules_tests.rs  dap_packaging_tests.rs  dap_performance_tests.rs  dap_preview_e2e_receipts.rs  dap_security_tests.rs  dap_security_validation_tests.rs  dap_smoke_e2e.rs  dap_warn_exception_tests.rs  dap_watchpoints_tests.rs  safe_eval_extended_tests.rs  safe_evaluation_tests.rs  security_breakpoints_tests.rs  security_evaluate_extended_tests.rs  security_evaluate_tests.rs  security_gap_test.rs  security_inline_values_tests.rs  security_path_traversal.rs  security_regression_missing_ops.rs  security_regression_tests.rs  security_repro.rs  security_repro_test.rs  session_lifecycle_tests.rs  stack_trace_provider_tests.rs  tcp_attach_tests.rs  variable_rendering_tests.rs
crates/perl-diagnostics-codes/: CLAUDE.md  Cargo.toml  README.md
crates/perl-diagnostics-codes/src/: lib.rs
crates/perl-edit/: CLAUDE.md  Cargo.toml  README.md
crates/perl-edit/src/: lib.rs
crates/perl-error/: CLAUDE.md  Cargo.toml  README.md
crates/perl-error/src/: classifier.rs  lib.rs  recovery.rs
crates/perl-heredoc/: CLAUDE.md  Cargo.toml  README.md
crates/perl-heredoc/src/: lib.rs
crates/perl-incremental-parsing/: CLAUDE.md  Cargo.toml  LICENSE-APACHE  README.md
crates/perl-incremental-parsing/src/: lib.rs
crates/perl-lexer/: CLAUDE.md  Cargo.toml  README.md  test_pattern.rs
crates/perl-lexer/benches/: lexer_benchmarks.rs
crates/perl-lexer/examples/: debug_lexer.rs  perf_test.rs  test_data.rs  test_dollar_brace.rs  test_return_tokens.rs
crates/perl-lexer/src/: checkpoint.rs  error.rs  lib.rs  mode.rs  position.rs  quote_handler.rs  test_format_debug.rs  token.rs  unicode.rs
crates/perl-lsp-code-actions/: CLAUDE.md  Cargo.toml  README.md
crates/perl-lsp-completion/: CLAUDE.md  Cargo.toml  README.md
crates/perl-lsp-completion/src/: lib.rs  (+1 more)
crates/perl-lsp-diagnostics/: CLAUDE.md  Cargo.toml  README.md
crates/perl-lsp-formatting/: CLAUDE.md  Cargo.toml  README.md
crates/perl-lsp-inlay-hints/: CLAUDE.md  Cargo.toml  README.md
crates/perl-lsp-navigation/: CLAUDE.md  Cargo.toml  README.md
crates/perl-lsp-protocol/: CLAUDE.md  Cargo.toml  README.md
crates/perl-lsp-providers/: CLAUDE.md  Cargo.toml  Cargo.toml.backup-1769576081  README.md
crates/perl-lsp-rename/: CLAUDE.md  Cargo.toml  README.md
crates/perl-lsp-semantic-tokens/: CLAUDE.md  Cargo.toml  README.md
crates/perl-lsp-tooling/: CLAUDE.md  Cargo.toml  LICENSE-APACHE  README.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: builtin_functions.rs  heredoc_parsing.rs  lsp_navigation.rs  substitution_parsing.rs  unicode_positions.rs
xtask/: CLAUDE.md  Cargo.toml  benchmark_results_20250920_020126.txt  corpus_audit_report.json
xtask/lsp_test/: test_features.pl
xtask/src/: compare.rs  main.rs  types.rs  utils.rs
xtask/tests/: agent_config_validation_tests.rs  bench_cli.rs  ci_guardrail_ignored_test_monitoring_tests.rs
(+4171 files in other folders)
