[workspace]
resolver = "2"
members = [
    "crates/perl-lexer",
    "crates/perl-parser",
    "crates/perl-corpus",
    "crates/perl-lsp",
]
exclude = [
    "tree-sitter-perl",
    "tree-sitter-perl-c",  # Excluded: requires libclang-dev system package for bindgen (legacy C parser)
    "crates/perl-parser-pest",  # Excluded: legacy Pest parser with bindgen dependency
    "crates/tree-sitter-perl-rs",  # Excluded: internal testing crate with bindgen dependency
    "crates/parser-benchmarks",  # Excluded: benchmarking crate with potential dependencies
    "crates/parser-tests",  # Excluded: test harness with potential dependencies
    "xtask",  # Excluded: depends on excluded tree-sitter-perl crate
]

[workspace.dependencies]
perl-lexer = { path = "crates/perl-lexer" }
perl-parser = { path = "crates/perl-parser" }
tree-sitter-perl = { path = "crates/tree-sitter-perl-rs", features = ["pure-rust"] }
tree-sitter-perl-c = { path = "crates/tree-sitter-perl-c" }
tree-sitter = "0.25.8"

[patch.crates-io]
perl-lexer = { path = "crates/perl-lexer" }
perl-parser = { path = "crates/perl-parser" }
perl-corpus = { path = "crates/perl-corpus" }

# Profile for development - slightly optimized for better performance
[profile.dev]
opt-level = 1

# Profile for release builds - fully optimized
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = "debuginfo"

# Profile for benchmarks - maximum optimization
[profile.bench]
inherits = "release"
lto = true
codegen-units = 1

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Workspace lints - relax collapsible_if for v0.8.3 release
[workspace.lints.clippy]
collapsible_if = "allow"
