[workspace]
resolver = "2"
members = [
    "crates/perl-lexer",
    "crates/perl-parser",
    "crates/perl-parser-core",
    "crates/perl-semantic-analyzer",
    "crates/perl-workspace-index",
    "crates/perl-refactoring",
    "crates/perl-incremental-parsing",
    "crates/perl-tdd-support",
    "crates/perl-lsp-providers",
    "crates/perl-position-tracking",
    "crates/perl-corpus",
    "crates/perl-lsp",
    "crates/perl-dap",
    "xtask",
]
exclude = [
    "tree-sitter-perl",
    "tree-sitter-perl-c",  # Excluded: requires libclang-dev system package for bindgen (legacy C parser)
    "crates/tree-sitter-perl-rs",  # Excluded: requires libclang-dev system package for bindgen (Rust wrapper for tree-sitter-perl)
    "fuzz",  # Excluded: fuzz testing with specialized build requirements
    "archive",  # Excluded: archived legacy components
]

# Workspace-level package metadata
[workspace.package]
edition = "2024"
rust-version = "1.89"

[workspace.dependencies]
perl-lexer = { path = "crates/perl-lexer" }
perl-parser = { path = "crates/perl-parser" }
perl-parser-core = { path = "crates/perl-parser-core" }
perl-semantic-analyzer = { path = "crates/perl-semantic-analyzer" }
perl-workspace-index = { path = "crates/perl-workspace-index" }
perl-refactoring = { path = "crates/perl-refactoring" }
perl-incremental-parsing = { path = "crates/perl-incremental-parsing" }
perl-tdd-support = { path = "crates/perl-tdd-support" }
perl-lsp-providers = { path = "crates/perl-lsp-providers" }
perl-position-tracking = { path = "crates/perl-position-tracking" }
tree-sitter-perl = { path = "crates/tree-sitter-perl-rs", features = ["pure-rust"] }
tree-sitter-perl-c = { path = "crates/tree-sitter-perl-c" }
tree-sitter = "0.26.3"
ropey = "1.6.1"

[patch.crates-io]
perl-lexer = { path = "crates/perl-lexer" }
perl-parser = { path = "crates/perl-parser" }
perl-corpus = { path = "crates/perl-corpus" }

# Profile for development - slightly optimized for better performance
[profile.dev]
opt-level = 1

# Profile for release builds - fully optimized
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = "debuginfo"

# Profile for benchmarks - maximum optimization
[profile.bench]
inherits = "release"
lto = true
codegen-units = 1

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Workspace lints - relax collapsible_if for v0.8.3 release
[workspace.lints.clippy]
collapsible_if = "allow"
