[workspace]
resolver = "2"
members = [
    "crates/perl-ast",
    "crates/perl-token",
    "crates/perl-quote",
    "crates/perl-pragma",
    "crates/perl-edit",
    "crates/perl-builtins",
    "crates/perl-regex",
    "crates/perl-heredoc",
    "crates/perl-error",
    "crates/perl-tokenizer",
    "crates/perl-lexer",
    "crates/perl-parser",
    "crates/perl-parser-core",
    "crates/perl-parser-pest",
    "crates/perl-semantic-analyzer",
    "crates/perl-workspace-index",
    "crates/perl-refactoring",
    "crates/perl-incremental-parsing",
    "crates/perl-tdd-support",
    "crates/perl-lsp-providers",
    "crates/perl-lsp-rename",
    "crates/perl-lsp-protocol",
    "crates/perl-lsp-transport",
    "crates/perl-lsp-tooling",
    "crates/perl-lsp-formatting",
    "crates/perl-lsp-diagnostics",
    "crates/perl-lsp-semantic-tokens",
    "crates/perl-lsp-inlay-hints",
    "crates/perl-lsp-navigation",
    "crates/perl-lsp-completion",
    "crates/perl-lsp-code-actions",
    "crates/perl-diagnostics-codes",
    "crates/perl-position-tracking",
    "crates/perl-symbol-types",
    "crates/perl-symbol-table",
    "crates/perl-uri",
    "crates/perl-corpus",
    "crates/perl-lsp",
    "crates/perl-dap",
    "crates/perl-dap-breakpoint",
    "crates/perl-dap-eval",
    "crates/perl-dap-stack",
    "crates/perl-dap-variables",
    "crates/tree-sitter-perl-rs",
    "crates/perl-ts-heredoc-analysis",
    "crates/perl-ts-logos-lexer",
    "crates/perl-ts-heredoc-parser",
    "crates/perl-ts-partial-ast",
    "crates/perl-ts-advanced-parsers",
    "xtask",
]

exclude = [
    "tree-sitter-perl",           # Legacy C parser
    "fuzz",                       # cargo-fuzz specialized requirements
    "archive",                    # Archived legacy components
]

# Workspace-level package metadata
[workspace.package]
version = "0.9.1"
edition = "2024"
rust-version = "1.92"
authors = ["Steven Zimmerman, CPA <git@effortlesssteven.com>"]
description = "Perl parser, LSP, and DAP ecosystem in Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/EffortlessMetrics/perl-lsp"
homepage = "https://github.com/EffortlessMetrics/perl-lsp"

[workspace.dependencies]
# Tier 1: Leaf crates (no internal dependencies)
perl-token = { path = "crates/perl-token", version = "0.9.1" }
perl-quote = { path = "crates/perl-quote", version = "0.9.1" }
perl-edit = { path = "crates/perl-edit", version = "0.9.1" }
perl-builtins = { path = "crates/perl-builtins", version = "0.9.1" }
perl-regex = { path = "crates/perl-regex", version = "0.9.1" }
perl-pragma = { path = "crates/perl-pragma", version = "0.9.1" }
perl-lexer = { path = "crates/perl-lexer", version = "0.9.1" }
perl-ast = { path = "crates/perl-ast", version = "0.9.1" }
perl-heredoc = { path = "crates/perl-heredoc", version = "0.9.1" }
perl-error = { path = "crates/perl-error", version = "0.9.1" }
perl-tokenizer = { path = "crates/perl-tokenizer", version = "0.9.1" }
perl-position-tracking = { path = "crates/perl-position-tracking", version = "0.9.1" }
perl-symbol-types = { path = "crates/perl-symbol-types", version = "0.9.1" }
perl-symbol-table = { path = "crates/perl-symbol-table", version = "0.9.1" }
perl-lsp-protocol = { path = "crates/perl-lsp-protocol", version = "0.9.1" }
perl-uri = { path = "crates/perl-uri", version = "0.9.1" }
perl-corpus = { path = "crates/perl-corpus", version = "0.9.1" }
perl-dap = { path = "crates/perl-dap", version = "0.9.1" }
perl-dap-breakpoint = { path = "crates/perl-dap-breakpoint", version = "0.9.1" }
perl-dap-eval = { path = "crates/perl-dap-eval", version = "0.9.1" }
perl-dap-variables = { path = "crates/perl-dap-variables", version = "0.9.1" }
perl-dap-stack = { path = "crates/perl-dap-stack", version = "0.9.1" }

# Tier 2: Single-level dependencies
perl-parser-core = { path = "crates/perl-parser-core", version = "0.9.1" }
perl-lsp-transport = { path = "crates/perl-lsp-transport", version = "0.9.1" }
perl-lsp-tooling = { path = "crates/perl-lsp-tooling", version = "0.9.1" }
perl-lsp-formatting = { path = "crates/perl-lsp-formatting", version = "0.9.1" }
perl-tdd-support = { path = "crates/perl-tdd-support", version = "0.9.1" }
perl-lsp-diagnostics = { path = "crates/perl-lsp-diagnostics", version = "0.9.1" }
perl-lsp-semantic-tokens = { path = "crates/perl-lsp-semantic-tokens", version = "0.9.1" }
perl-lsp-inlay-hints = { path = "crates/perl-lsp-inlay-hints", version = "0.9.1" }
perl-lsp-navigation = { path = "crates/perl-lsp-navigation", version = "0.9.1" }
perl-lsp-rename = { path = "crates/perl-lsp-rename", version = "0.9.1" }
perl-lsp-completion = { path = "crates/perl-lsp-completion", version = "0.9.1" }
perl-lsp-code-actions = { path = "crates/perl-lsp-code-actions", version = "0.9.1" }
perl-diagnostics-codes = { path = "crates/perl-diagnostics-codes", version = "0.9.1" }

# Tier 3: Two-level dependencies
perl-workspace-index = { path = "crates/perl-workspace-index", version = "0.9.1" }
perl-incremental-parsing = { path = "crates/perl-incremental-parsing", version = "0.9.1" }
perl-refactoring = { path = "crates/perl-refactoring", version = "0.9.1" }

# Tier 4: Three-level dependencies
perl-semantic-analyzer = { path = "crates/perl-semantic-analyzer", version = "0.9.1" }
perl-lsp-providers = { path = "crates/perl-lsp-providers", version = "0.9.1", default-features = false }

# Tier 5: Application crates
perl-parser = { path = "crates/perl-parser", version = "0.9.1" }

# Legacy/Compatibility crates
perl-parser-pest = { path = "crates/perl-parser-pest", version = "0.9.1" }

# External dependencies
tree-sitter-perl = { path = "crates/tree-sitter-perl-rs", features = ["pure-rust"] }
tree-sitter-perl-c = { path = "crates/tree-sitter-perl-c" }
tree-sitter = "0.26.3"
ropey = "1.6.1"

# Profile for development - slightly optimized for better performance
[profile.dev]
opt-level = 1

# Profile for release builds - fully optimized
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = "debuginfo"

# Profile for benchmarks - maximum optimization
[profile.bench]
inherits = "release"
lto = true
codegen-units = 1

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Workspace lints
[workspace.lints.clippy]
collapsible_if = "allow"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(ci)', 'cfg(feature, values("slow_tests"))'] }
