[package]
name = "perl-parser-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.perl-parser]
path = "../crates/perl-parser"

[[bin]]
name = "substitution_parsing"
path = "fuzz_targets/substitution_parsing.rs"
test = false
doc = false
bench = false
