[package]
name = "xtask"
version = "0.8.3"
edition.workspace = true
rust-version.workspace = true
license = "MIT OR Apache-2.0"
description = "Task runner for Perl LSP workspace"
repository = "https://github.com/EffortlessMetrics/tree-sitter-perl-rs"
readme = "../README.md"
keywords = ["perl", "parser", "lsp", "tasks"]
categories = ["development-tools"]

[dependencies]
clap = { version = "4.5.55", features = ["derive"] }
color-eyre = "0.6.5"
similar = "2.7.0"
duct = "1.1.1"
walkdir = "2.5.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "0.9.8"
anyhow = "1.0.100"
indicatif = "0.18.3"
console = "0.16.2"
chrono = { version = "0.4.43", features = ["serde"] }
perl-parser = { workspace = true }
perl-parser-pest = { workspace = true, optional = true }
tree-sitter = { workspace = true }
tree-sitter-perl = { path = "../crates/tree-sitter-perl-rs", optional = true, features = ["c-parser"] }
regex = "1.12.2"
serde_yaml_ng = "0.10.0"
bindgen = "0.72.1"
peak_alloc = "0.3.0"
notify = "8.2.0"

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.18.0"

[dev-dependencies]
tempfile = "3.24.0"
assert_cmd = "2.1.2"
perl-tdd-support = { workspace = true }

[features]
# Additional tasks that depend on legacy tree-sitter-perl crate
legacy = ["tree-sitter-perl", "perl-parser-pest"]
# Parser-related tasks
parser-tasks = ["tree-sitter-perl"]
