[package]
name = "parser-benchmarks"
version = "0.1.0"
edition = "2021"

[dependencies]
perl-lexer = { path = "../perl-lexer" }
perl-parser = { path = "../perl-parser" }
tree-sitter-perl = { path = "../tree-sitter-perl-rs", optional = true }
tree-sitter-perl-c = { path = "../tree-sitter-perl-c" }
tree-sitter = { version = "0.20", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = []
tree-sitter-perl-rs = ["tree-sitter-perl", "tree-sitter-perl/pure-rust-standalone"]

[[bench]]
name = "compare_parsers"
harness = false

[[bench]]
name = "simple_compare"
harness = false

[[bench]]
name = "comprehensive_patterns"
harness = false