[package]
name = "parser-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
# Parsers to test
perl-parser = { path = "../perl-parser" }
tree-sitter-perl = { path = "../tree-sitter-perl-rs", features = ["pure-rust-standalone"] }
tree-sitter-perl-c = { path = "../tree-sitter-perl-c" }

# Testing utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
colored = "2.0"
walkdir = "2.4"

[dev-dependencies]
insta = { version = "1.31", features = ["json"] }
pretty_assertions = "1.4"