[package]
name = "parser-tests"
version = "0.5.0"
edition = "2021"

[dependencies]
# Parsers to test
perl-parser = { path = "../perl-parser" }
tree-sitter-perl = { path = "../tree-sitter-perl-rs", features = ["pure-rust-standalone"] }
tree-sitter-perl-c = { path = "../tree-sitter-perl-c" }

# Testing utilities
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
anyhow = "1.0.98"
colored = "3.0.0"
walkdir = "2.5.0"

[dev-dependencies]
insta = { version = "1.43.1", features = ["json"] }
pretty_assertions = "1.4.1"