[package]
name = "perl-ast"
version = "0.9.0"
edition.workspace = true
rust-version.workspace = true
authors = ["Tree-sitter Perl Contributors"]
description = "AST definitions for Perl parser"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/EffortlessMetrics/tree-sitter-perl-rs"
homepage = "https://github.com/EffortlessMetrics/tree-sitter-perl-rs"
documentation = "https://docs.rs/perl-ast"
keywords = ["perl", "ast", "parser", "lsp"]
categories = ["parsing", "development-tools"]

[dependencies]
perl-position-tracking = { workspace = true }
perl-token = { workspace = true }

[lints]
workspace = true
