[package]
name = "perl-ast"
version = "0.9.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "AST node definitions for Perl parsing, providing typed representations of Perl syntax constructs"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/perl-ast"
keywords = ["perl", "ast", "parser", "syntax-tree"]
categories = ["parsing", "development-tools"]

[dependencies]
perl-position-tracking = { workspace = true }
perl-token = { workspace = true }

[lints]
workspace = true
