[package]
name = "perl-builtins"
version = "0.9.1"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Builtin symbol metadata for Perl parser and LSP tooling"
readme = "README.md"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/perl-builtins"
keywords = ["perl", "builtins", "parser", "lsp", "signatures"]
categories = ["development-tools", "text-processing"]

[dependencies]
phf = { version = "0.13.1", features = ["macros"] }

[lints]
workspace = true
