[package]
name = "perl-corpus"
rust-version = "1.89"
version = "0.8.8"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Test corpus management and generators for Perl parsers"
readme = "README.md"
repository = "https://github.com/EffortlessSteven/tree-sitter-perl-rs"
documentation = "https://docs.rs/perl-corpus"
homepage = "https://github.com/EffortlessSteven/tree-sitter-perl-rs"
keywords = ["perl", "corpus", "proptest", "testing"]
categories = ["development-tools", "testing"]
include = ["src/**", "README.md", "LICENSE*", "Cargo.toml"]

[lib]
name = "perl_corpus"
path = "src/lib.rs"

[[bin]]
name = "perl-corpus"
path = "src/bin/main.rs"

[dependencies]
anyhow = "1.0.100"
thiserror = "2.0.17"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
regex = "1.11.3"
glob = "0.3.3"
bstr = "1.12.0"
clap = { version = "4.5.48", features = ["derive"] }
once_cell = "1.21.3"
chrono = "0.4.42"
proptest = "1.8.0"
rand = "0.9.2"

[dev-dependencies]
proptest = "1.8.0"
perl-parser = { workspace = true }

[features]
default = []
# Enable fast CI mode that skips slow/flaky property tests
ci-fast = []

[package.metadata.docs.rs]
all-features = false