[package]
name = "perl-corpus"
version = "0.9.0"
edition.workspace = true
rust-version.workspace = true
license = "MIT OR Apache-2.0"
description = "Test corpus management and generators for Perl parsers"
readme = "README.md"
repository = "https://github.com/EffortlessMetrics/perl-lsp"
documentation = "https://docs.rs/perl-corpus"
homepage = "https://github.com/EffortlessMetrics/perl-lsp"
keywords = ["perl", "corpus", "proptest", "testing", "parser"]
categories = ["development-tools", "testing"]
include = ["src/**", "README.md", "LICENSE*", "Cargo.toml"]

[lib]
name = "perl_corpus"
path = "src/lib.rs"

[[bin]]
name = "perl-corpus"
path = "src/bin/main.rs"

[dependencies]
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
regex = "1.12.2"
glob = "0.3.3"
clap = { version = "4.5.55", features = ["derive"] }
once_cell = "1.21.3"
chrono = "0.4.42"
proptest = "1.9.0"
rand = "0.9.2"

[dev-dependencies]
proptest = "1.9.0"
perl-parser = { workspace = true }
perl-tdd-support = { workspace = true }

[features]
default = []
# Enable fast CI mode that skips slow/flaky property tests
ci-fast = []

[package.metadata.docs.rs]
all-features = false
[lints]
workspace = true
