[package]
name = "perl-dap-eval"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors = ["Tree-sitter Perl Contributors"]
description = "Safe expression evaluation validation for Perl DAP"
license = "MIT OR Apache-2.0"
repository = "https://github.com/EffortlessMetrics/tree-sitter-perl-rs"
readme = "README.md"
keywords = ["perl", "dap", "debug", "eval", "security"]
categories = ["development-tools"]

[dependencies]
# Regex for pattern matching
regex = "1.12.2"

# Error handling
thiserror = "2.0.18"

[dev-dependencies]
perl-tdd-support = { workspace = true }

[lints]
workspace = true
