[package]
name = "perl-dap-eval"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Safe expression evaluation validation for Perl DAP"
license = "MIT OR Apache-2.0"
repository = "https://github.com/EffortlessMetrics/perl-lsp"
homepage = "https://github.com/EffortlessMetrics/perl-lsp"
documentation = "https://docs.rs/perl-dap-eval"
readme = "README.md"
keywords = ["perl", "dap", "debug", "eval", "security"]
categories = ["development-tools", "development-tools::debugging"]

[dependencies]
# Regex for pattern matching
regex = "1.12.2"
once_cell = "1.21.3"

# Error handling
thiserror = "2.0.18"

[dev-dependencies]
perl-tdd-support = { workspace = true }

[lints]
workspace = true
