[package]
name = "perl-dap-stack"
version = "0.9.1"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Stack trace parsing and frame classification for the Perl Debug Adapter Protocol"
readme = "README.md"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/perl-dap-stack"
keywords = ["perl", "dap", "debug", "stack-trace", "debugger"]
categories = ["development-tools::debugging"]

[dependencies]
# Serialization for DAP protocol
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Regex for parsing debugger output
regex = "1.12"
once_cell = "1.21"

# Error handling
thiserror = "2.0"

[dev-dependencies]
perl-tdd-support = { workspace = true }

[lints]
workspace = true
