[package]
name = "perl-dap-variables"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors = ["Tree-sitter Perl Contributors"]
description = "Variable rendering for Perl DAP"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/EffortlessMetrics/tree-sitter-perl-rs"
homepage = "https://github.com/EffortlessMetrics/tree-sitter-perl-rs"
documentation = "https://docs.rs/perl-dap-variables"
keywords = ["perl", "dap", "debug", "variables", "rendering"]
categories = ["development-tools::debugging", "development-tools"]

[dependencies]
# Serialization for DAP protocol
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Regex for parsing debugger output
regex = "1.12"
once_cell = "1.21"

# Error handling
thiserror = "2.0"

[dev-dependencies]
perl-tdd-support = { workspace = true }

[lints]
workspace = true
